# pypgapack

./: CMakeLists.txt  COPYRIGHT  README  api_reference.html  examples.html  genindex.html  getting_started.html  index.html  license.html  methods.html  objects.inv  search.html  searchindex.js
_sources/: api_reference.txt  getting_started.txt  index.txt
doc/: make.bat
doc/source/: conf.py  examples.rst
examples/: example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example07.py  example08.py  example09.py  example10.py  run_examples.py
examples/output/: .gitignore  example01  example01_ref  example02_ref  example03_ref  example05_ref  example06_ref  example07_ref  example08_ref_np_1  example08_ref_np_2  example09_ref_np_1  example09_ref_np_6  example10_ref_np_1  example10_ref_np_2  example10_ref_np_5
patch/: Makefile.in  configure  pgapack.h
pgapack/: CMakeLists.txt  pgapack_config.h.in
pgapack/include/: pgapack.h
pypgapack/: CMakeLists.txt  __init__.py  build_pypgapack  pgapack.hh  pypgapack.i  pypgapack.py  pypgapack_config.hh.in  pypgapack_wrap.cxx
pypgapack/mpi4py/: mpi4py.MPI.h  mpi4py.MPI_api.h
